--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-#test:
-#  <<: *default
-#  database: db/walkin_test.sqlite3
+test:
+  <<: *default
+  database: db/walkin_test.sqlite3
 
 production:
   adapter: postgresql
