--- a/test/fixtures/vaccines.yml
+++ b/test/fixtures/vaccines.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  code: MyString
-  Name: MyString
+  name: MyString
+  target: MyString
   route: MyString
   dose: MyString
-  DIN: MyString
+  din: MyString
   notes: MyText
 
 two:
-  code: MyString
-  Name: MyString
+  name: MyString
+  target: MyString
   route: MyString
   dose: MyString
-  DIN: MyString
+  din: MyString
   notes: MyText
