--- a/config/database.yml
+++ b/config/database.yml
@@ -20,9 +20,8 @@ test:
 production:
   adapter: postgresql
   encoding: utf8
-  database: walkin
-  username: rails
-  password: musia4391
-#  host: 24.141.19.150 
+  database: Rails.application.credentials.production[:db][:name] 
+  username: Rails.application.credentials.production[:db][:username]
+  password: Rails.application.credentials.production[:db][:password] 
   port: 5432
   pool: 10
