--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,9 @@ test:
 production:
   adapter: postgresql
   encoding: utf8
-  database: Rails.application.credentials.production[:db][:name] 
-  username: Rails.application.credentials.production[:db][:username]
-  password: Rails.application.credentials.production[:db][:password] 
+  #  database: <%= Rails.application.credentials.dig(:production,:db,:password) %>
+  database: <%= Rails.application.credentials.production[:db][:name] %>
+  username: <%= Rails.application.credentials.production[:db][:username] %>
+  password: <%= Rails.application.credentials.production[:db][:password] %>
   port: 5432
   pool: 10
