--- a/test/fixtures/doctors.yml
+++ b/test/fixtures/doctors.yml
@@ -4,10 +4,6 @@ one:
   lname: "Evil" 
   fname: "Bill"
   cpso_num: 10000
-  billing_num: 999999
-  service: "GENP"
-  ph_type: "GP"
-  district: "G"
   bills: true
   address: '1 James st w, Unit 5'
   city: 'Hamilton'
@@ -15,23 +11,20 @@ one:
   postal: 'L9G1G1'
   phone: 9991112221
   mobile: 1112223332
-  licence_no: 12231
   note: 'blah'
   office: '2 John str w 905-551-2212'
   provider_no: 123455
   group_no: 1234
   specialty: '00'
   email: doc1@docs.com
-  doc_code: 'l&'
+  district: 101
+  wsib_num: 12344
+  accepts_new_patients: true
 
 two:
   lname: "Good"
   fname: "Boy"
   cpso_num: 99818
-  billing_num: 11000
-  service: "GENP"
-  ph_type: "GP"
-  district: "G"
   bills: true
   address: '1 James st w, Unit 6'
   city: 'Hamilton'
@@ -39,11 +32,12 @@ two:
   postal: 'L9G1G1'
   phone: 9991112222
   mobile: 1112223333
-  licence_no: 12232
   note: 'blah'
   office: '1 John str w 905-551-2212'
   provider_no: 123456
   group_no: 1235
   specialty: '00'
   email: doc2@docs.com
-  doc_code: 'l:'
+  district: 109
+  wsib_num: 12345
+  accepts_new_patients: true
