--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -50,7 +50,7 @@ five:
   lname: Bach 
   fname: Ellis
   sex: F
-  ifs_number: 9987654321  
+  ifh_number: 9987654321  
   dob: 1959-05-21
   phone: 9052223242
   ohip_ver: PX
