--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -4,14 +4,16 @@ one:
   name: Name1
   doc_id: 1
   rtype: 1
-  filespec: filespec1
+  filename: FileName1
   sdate: 2018-01-01
   edate: 208-02-01
+  timeframe: 3
 
 two:
   name: Name2
   doc_id: 2
   rtype: 2
-  filespec: filespec2
+  filename: FileName2
   sdate: 2018-01-01
   edate: 208-02-01
+  timeframe: 2
