--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,31 +3,42 @@ me:
   name: Me Meme
   email: me@me2.com
   password_digest: <%= User.digest('musia4391') %>
-  admin: true
+  role: 1
+  activated: true
 
 michael:
   name: Michael Example
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
+  role: 2
+  activated: true
 
 archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
+  role: 0
+  activated: true
 
 lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
+  role: 1
+  activated: true
 
 malory:
   name: Malory Archer
   email: boss@example.gov
   password_digest: <%= User.digest('password') %>
+  role: 2
+  activated: true
 
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
+  role: 1
+  activated: true
 <% end %>
