--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@
 .DS_Store
 /.idea/*
 *.swp
+
+# ignore pg restore script - platform specific
+/utils/pgrestore.pl
+utils/pgrestore.pl
+utils/pgrestore.pl
