--- a/config/database.yml
+++ b/config/database.yml
@@ -2,20 +2,31 @@
 #
 
 default: &default
-  adapter: sqlite3
+#  adapter: sqlite3
+  adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/walkin_dev.sqlite3
+#  database: db/walkin_dev.sqlite3
+  database: <%= Rails.application.credentials.development[:db][:name] %>
+  username: <%= Rails.application.credentials.development[:db][:username] %>
+  password: <%= Rails.application.credentials.development[:db][:password] %>
+  port: 5432
+  pool: 10
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/walkin_test.sqlite3
+  #  database: db/walkin_test.sqlite3
+  database: <%= Rails.application.credentials.development[:db][:name] %>
+  username: <%= Rails.application.credentials.development[:db][:username] %>
+  password: <%= Rails.application.credentials.development[:db][:password] %>
+  port: 5432
+  pool: 10
 
 production:
   adapter: postgresql
